# x4-reader-os-rs

./: Cargo.toml  README.txt
kernel/src/: lib.rs
kernel/src/app/: browser.rs  home.rs  mod.rs  model.rs  reader.rs
src/: lib.rs
src/apps/: files.rs  home.rs  manager.rs  reader_state.rs
src/apps/reader/: mod.rs
