[workspace]
members = ["kernel"]
resolver = "2"

[workspace.dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c3", "log-04", "unstable"] }
embassy-executor = "0.9"
embassy-time = "0.5"
embassy-futures = "0.1"
embassy-sync = "0.7"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.3.0"
embedded-graphics-core = "0.4.1"
embedded-graphics = "0.8.2"
embedded-sdmmc = { git = "https://github.com/hansmrtn/embedded-sdmmc-rs", branch = "async", features = ["async"] }
critical-section = "1.2.0"
static_cell = "2.1.1"
nb = "1.1.0"
log = "0.4.27"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false